--- a/car5.html
+++ b/car5.html
@@ -7,21 +7,9 @@
     <link rel="stylesheet" href="Style1.css">
     
 </head>
-<header>
-    <a href="index.html">
-        <img src="logo .jpg"  height="75px" width="105px" >
-      </a>
-
-        <h1>Mercedes AMG 63</h1>
-<nav style="top: auto;">
-    <ul class="navbar-nav">
-        <a class="nav-link" href="index.html">Domov</a></li>
-        <a class="nav-link" href="dostupne-auta.html">Dostupné autá</a></li>
-        <a class="nav-link" href="onas.html">O nás</a></li>
-        <a class="nav-link" href="kontakt.html">KONTAKT</a></li>
-    </ul>
-</nav>
-</header>
+<?php
+    include_once('header.php');
+?> 
 <body>
 <br>
 <br>
